# flora-os

./: README.md  __main__.py  pyproject.toml
flora-os/: __main__.py  controller.py  test.py  traction.py  util.py
flora-os/common/: __init__.py  distance_sensor.py  expression.py  fine_motor.py  mood.py  pos.py  pose.py  scan.py
flora-os/flora/: __init__.py  flora.py  imu.py
flora-os/graph_slam/: __init__.py
flora-os/network/: __init__.py  client.py  io.py  message.py  queue.py  relay.py  server.py
flora-os/sensors/: head.py  mouth.py  sensors.py  sonar.py
flora-os/slam/: __init__.py  config.py  slam_builder.py  slam_data.py  util.py
flora_os/: controller.py  util.py
flora_os/common/: expression.py  mood.py  scan.py
flora_os/network/: message.py  relay.py
flora_os/sensors/: __init__.py  head.py  mouth.py  sonar.py
flora_os/slam/: __init__.py  config.py  slam_builder.py  slam_solver.py  util.py
flora_os/slam/helpers/: __init__.py  bilinear_interpolation.py  calculate_bounds.py  compute_jo.py  delta.py  diff_jacobian.py  downsample_scans.py  get_i_matrices.py  get_i_o.py  gradient.py  initialize_grid_map.py  initialize_odometry.py  initialize_scans.py  rotate_and_scale.py  select_const_grid.py  select_initial_grid.py  select_laplacian.py  select_scan.py  smooth_n2.py  smooth_select_n2.py  update_grid.py  update_grid_n.py  update_n.py  update_select_n.py  util.py
network/: client.py  message.py  relay.py
