[tool.poetry]
name = "flora-os"
version = "0.0.1"
description = "FLORA OS"
authors = ["Benj Wiswell <benjwiswell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
buildhat = "^0.9.0"
gpiozero = "^2.0.1"
sense-hat = "^2.6.0"
filterpy = "^1.4.5"
seared = {git = "https://www.github.com/bwiswell/seared.git"}
scipy = "^1.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
